Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@132380 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/directive/devices/schedule.html
+++ b/local/directive/devices/schedule.html
@@ -1,94 +1,104 @@
-<div class="schedule-wrap">
-  <div>
-    <div class="schedule-name">
-      <p ng-hide="editMode">{{schinfo.name}}</p>
-      <div class="schedule-edit-mode" ng-show="editMode">
-        <input type="text" ng-model="schinfo.name" class="form-input edit-schedule-input">
-      </div>
-    </div>
-    <div class="schedule-devices">
-      <p ng-repeat="action in schinfo.actions">{{action.description.name}} {{action.description.action}}</p>
-    </div>
+<div class="row schedule-wrap">
+  <div class="col-xs-12 col-sm-6">
+    <p>{{schinfo.name}}</p>
   </div>
+  <div class="col-xs-12 col-sm-6 display-flex justify-end">
+    <!-- log days of schedule !-->
+    <span ng-if="schinfo.dateTime.dayOfWeek.length < 7" ng-repeat="day in schinfo.dateTime.dayOfWeek">
+      <p ng-if="day === 0">Sun
+        <span ng-hide="$index == schinfo.dateTime.dayOfWeek.length -1">,</span>
+      </p>
+      <p ng-if="day === 1">Mon
+        <span ng-hide="$index == schinfo.dateTime.dayOfWeek.length -1">,</span>
+      </p>
+      <p ng-if="day === 2">Tue
+        <span ng-hide="$index == schinfo.dateTime.dayOfWeek.length -1">,</span>
+      </p>
+      <p ng-if="day === 3">Wed
+        <span ng-hide="$index == schinfo.dateTime.dayOfWeek.length -1">,</span>
+      </p>
+      <p ng-if="day === 4">Thu
+        <span ng-hide="$index == schinfo.dateTime.dayOfWeek.length -1">,</span>
+      </p>
+      <p ng-if="day === 5">Fri
+        <span ng-hide="$index == schinfo.dateTime.dayOfWeek.length -1">,</span>
+      </p>
+      <p ng-if="day === 6">Sat
+        <span ng-hide="$index == schinfo.dateTime.dayOfWeek.length -1">,</span>
+      </p>
+    </span>
+    <p ng-if="schinfo.dateTime.dayOfWeek.length === 7" class="color-blue">Daily</p>
+    <p ng-if="schinfo.dateTime.date">{{schinfo.dateTime.date | date: 'd/MMM/yyyy HH:mm'}}</p>
 
-  <div>
-    <!-- if days of week !-->
-    <div ng-if="schinfo.dateTime.dayOfWeek" class="schedule-days" ng-hide="editMode">
-      <p ng-if="schinfo.dateTime.dayOfWeek.length === 7" class="color-blue"> Daily, </p>
-      <span ng-if="schinfo.dateTime.dayOfWeek.length < 7" ng-repeat="day in schinfo.dateTime.dayOfWeek">
-        <p ng-if="day === 0"> Sun, </p>
-        <p ng-if="day === 1"> Mon, </p>
-        <p ng-if="day === 2"> Tue, </p>
-        <p ng-if="day === 3"> Wed, </p>
-        <p ng-if="day === 4"> Thu, </p>
-        <p ng-if="day === 5"> Fri, </p>
-        <p ng-if="day === 6"> Sat, </p>
-      </span>
-      <p class="color-white"> {{schinfo.dateTime.hour}}:{{schinfo.dateTime.minute}}</p>
-    </div>
-
-    <div ng-show="editMode" class="schedule-edit-mode">
-      <span>
-        <input type="checkbox" id="new-scene-mon-{{schinfo.id}}" class="new-scene-day" value="1">
-        <label for="new-scene-mon-{{schinfo.id}}" class="new-scene-day-label">Mon</label>
-      </span>
-      <span>
-        <input type="checkbox" id="new-scene-tue-{{schinfo.id}}" class="new-scene-day" value="2">
-        <label for="new-scene-tue-{{schinfo.id}}" class="new-scene-day-label">Tue</label>
-      </span>
-      <span>
-        <input type="checkbox" id="new-scene-wed-{{schinfo.id}}" class="new-scene-day" value="3">
-        <label for="new-scene-wed-{{schinfo.id}}" class="new-scene-day-label">Wed</label>
-      </span>
-      <span>
-        <input type="checkbox" id="new-scene-thu-{{schinfo.id}}" class="new-scene-day" value="4">
-        <label for="new-scene-thu-{{schinfo.id}}" class="new-scene-day-label">Thu</label>
-      </span>
-      <span>
-        <input type="checkbox" id="new-scene-fri-{{schinfo.id}}" class="new-scene-day" value="5">
-        <label for="new-scene-fri-{{schinfo.id}}" class="new-scene-day-label">Fri</label>
-      </span>
-      <span>
-        <input type="checkbox" id="new-scene-sat-{{schinfo.id}}" class="new-scene-day" value="6">
-        <label for="new-scene-sat-{{schinfo.id}}" class="new-scene-day-label">Sat</label>
-      </span>
-      <span>
-        <input type="checkbox" id="new-scene-sun-{{schinfo.id}}" class="new-scene-day" value="0">
-        <label for="new-scene-sun-{{schinfo.id}}" class="new-scene-day-label">Sun</label>
-      </span>
-    </div>
-
-    <div ng-show="editMode" class="schedule-edit-mode">
-      <input type="number" class="form-number" id="new-scene-hours" name="hour" placeholder="Hours" ng-model="schinfo.dateTime.hour">
-      <input type="number" class="form-number" id="new-scene-minutes" name="minute" placeholder="Minutes" ng-model="schinfo.dateTime.minute">
-    </div>
-
-    <!-- if sunset or sunrise !-->
-    <div ng-if="!schinfo.dateTime.dayOfWeek" class="schedule-obj-repeat" ng-hide="editMode">
-      <p>{{schinfo.dateTime}}</p>
-    </div>
-
-
-    <div class="dropdown" ng-hide="editMode">
+    <!-- dropdown menu, edit, delete !-->
+    <div class="dropdown">
       <button type="button" class="button edit-schedule-btn" id="edit-schedule-btn" role="button" data-toggle="dropdown"></button>
       <ul class="dropdown-menu edit-schedule-dropdown" role="menu" aria-labelledby="edit-schedule-btn">
-        <li role="presentation" class="edit-schedule-dropdown-btn">
-          <a role="menuitem" tabindex="-1" href="" ng-click="editSchedule(schinfo)">
-            Edit
+        <li role="presentation" class="edit-schedule-dropdown-btn" ng-hide="schinfo.type === 'device'">
+          <a role="menuitem" tabindex="-1" href="" data-toggle="collapse" data-target="#edit-schedule-menu-{{schinfo.id}}">
+        Edit
           </a>
         </li>
         <li role="presentation" class="delete-schedule-dropdown-btn">
-          <a role="menuitem" tabindex="-1" href="" ng-click="deleteJob(schinfo.id)">
-            Delete
+          <a role="menuitem" tabindex="-1" href="" ng-click="deleteSchedule(schinfo.id)">
+        Delete
           </a>
         </li>
       </ul>
     </div>
+  </div>
 
-    <div class="schedule-edit-mode" ng-show="editMode">
-      <button type="submit" class="button save-edit-schedule-btn" ng-click="saveEditSchedule(schinfo)">Done</button>
-      <button type="reset" class="button cancel-edit-category-btn" ng-click="
-        scope.editMode = !false;"></button>
+  <!-- edit schedule collapse !-->
+  <div class="col-xs-12 collapse" id="edit-schedule-menu-{{schinfo.id}}">
+    <div class="col-xs-6 col-sm-6 col-md-2 edit-schedule-group">
+      <input type="text" class="form-input" ng-model="schinfo.name" placeholder="Schedule name" pattern=".{4,15}" title="4 - 15 characters" required>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-2 edit-schedule-group">
+      <input type="number" class="form-number" ng-model="schinfo.dateTime.hour" placeholder="Hours" min="0" max="23">
+      <input type="number" class="form-number" ng-model="schinfo.dateTime.minute" placeholder="Minutes" min="0" max="59">
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-5 edit-schedule-group">
+      <span>
+        <input type="checkbox" id="edit-schedule-mon-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(1) != -1" value="1">
+        <label for="edit-schedule-mon-{{schinfo.id}}" class="schedule-label">Mon</label>
+      </span>
+      <span>
+        <input type="checkbox" id="edit-schedule-tue-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(2) != -1" value="2">
+        <label for="edit-schedule-tue-{{schinfo.id}}" class="schedule-label">Tue</label>
+      </span>
+      <span>
+        <input type="checkbox" id="edit-schedule-wed-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(3) != -1" value="3">
+        <label for="edit-schedule-wed-{{schinfo.id}}" class="schedule-label">Wed</label>
+      </span>
+      <span>
+        <input type="checkbox" id="edit-schedule-thu-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(4) != -1" value="4">
+        <label for="edit-schedule-thu-{{schinfo.id}}" class="schedule-label">Thu</label>
+      </span>
+      <span>
+        <input type="checkbox" id="edit-schedule-fri-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(5) != -1" value="5">
+        <label for="edit-schedule-fri-{{schinfo.id}}" class="schedule-label">Fri</label>
+      </span>
+      <span>
+        <input type="checkbox" id="edit-schedule-sat-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(6) != -1" value="6">
+        <label for="edit-schedule-sat-{{schinfo.id}}" class="schedule-label">Sat</label>
+      </span>
+      <span>
+        <input type="checkbox" id="edit-schedule-sun-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(0) != -1" value="0">
+        <label for="edit-schedule-sun-{{schinfo.id}}" class="schedule-label">Sun</label>
+      </span>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-2 edit-schedule-group">
+      <span>
+        <input type="checkbox" id="edit-schedule-sunset-{{schinfo.id}}" value="sunset" ng-checked="schinfo.dateTime === 'sunset'">
+        <label for="edit-schedule-sunset-{{schinfo.id}}" class="schedule-label schedule-sunset-label">Sunset</label>
+      </span>
+      <span>
+        <input type="checkbox" id="edit-schedule-sunrise-{{schinfo.id}}" value="sunrise" ng-checked="schinfo.dateTime === 'sunrise'">
+        <label for="edit-schedule-sunrise-{{schinfo.id}}" class="schedule-label schedule-sunrise-label">Sunrise</label>
+      </span>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-1 edit-schedule-group">
+      <button type="submit" class="button blue-btn">Save</button>
     </div>
   </div>
 </div>
