Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@132405 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/html_route/frame_template.html
+++ b/local/html_route/frame_template.html
@@ -1,7 +1,7 @@
 <div class="frame-wrap">
   <!-- navigation !-->
   <h3 class="server-offline-msg" ng-show="God.serverOffline">
-    Ooops!! Something went wrong, server is offline
+    Server is offline
   </h3>
   <section class="frame-nav">
     <a ui-sref="frame.all-rooms">
