--- a/local/directive/devices/schedule.html
+++ b/local/directive/devices/schedule.html
@@ -28,13 +28,13 @@
       </p>
     </span>
     <p ng-if="schinfo.dateTime.dayOfWeek.length === 7" class="color-blue">Daily</p>
-    <p ng-if="schinfo.dateTime.date">{{schinfo.dateTime.date | date: 'd/MMM/yyyy HH:mm'}}</p>
+    <p ng-if="isNumber(schinfo.dateTime)">{{schinfo.dateTime | date: 'd/MMM/yyyy HH:mm'}}</p>
 
     <!-- dropdown menu, edit, delete !-->
     <div class="dropdown">
       <button type="button" class="button edit-schedule-btn" id="edit-schedule-btn" role="button" data-toggle="dropdown"></button>
       <ul class="dropdown-menu edit-schedule-dropdown" role="menu" aria-labelledby="edit-schedule-btn">
-        <li role="presentation" class="edit-schedule-dropdown-btn" ng-hide="schinfo.type === 'device'">
+        <li role="presentation" class="edit-schedule-dropdown-btn" ng-hide="isNumber(schinfo.dateTime)">
           <a role="menuitem" tabindex="-1" href="" data-toggle="collapse" data-target="#edit-schedule-menu-{{schinfo.id}}">
         Edit
           </a>
@@ -50,55 +50,57 @@
 
   <!-- edit schedule collapse !-->
   <div class="col-xs-12 collapse" id="edit-schedule-menu-{{schinfo.id}}">
-    <div class="col-xs-6 col-sm-6 col-md-2 edit-schedule-group">
-      <input type="text" class="form-input" ng-model="schinfo.name" placeholder="Schedule name" pattern=".{4,15}" title="4 - 15 characters" required>
-    </div>
-    <div class="col-xs-6 col-sm-6 col-md-2 edit-schedule-group">
-      <input type="number" class="form-number" ng-model="schinfo.dateTime.hour" placeholder="Hours" min="0" max="23">
-      <input type="number" class="form-number" ng-model="schinfo.dateTime.minute" placeholder="Minutes" min="0" max="59">
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-5 edit-schedule-group">
-      <span>
-        <input type="checkbox" id="edit-schedule-mon-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(1) != -1" value="1">
-        <label for="edit-schedule-mon-{{schinfo.id}}" class="schedule-label">Mon</label>
-      </span>
-      <span>
-        <input type="checkbox" id="edit-schedule-tue-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(2) != -1" value="2">
-        <label for="edit-schedule-tue-{{schinfo.id}}" class="schedule-label">Tue</label>
-      </span>
-      <span>
-        <input type="checkbox" id="edit-schedule-wed-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(3) != -1" value="3">
-        <label for="edit-schedule-wed-{{schinfo.id}}" class="schedule-label">Wed</label>
-      </span>
-      <span>
-        <input type="checkbox" id="edit-schedule-thu-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(4) != -1" value="4">
-        <label for="edit-schedule-thu-{{schinfo.id}}" class="schedule-label">Thu</label>
-      </span>
-      <span>
-        <input type="checkbox" id="edit-schedule-fri-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(5) != -1" value="5">
-        <label for="edit-schedule-fri-{{schinfo.id}}" class="schedule-label">Fri</label>
-      </span>
-      <span>
-        <input type="checkbox" id="edit-schedule-sat-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(6) != -1" value="6">
-        <label for="edit-schedule-sat-{{schinfo.id}}" class="schedule-label">Sat</label>
-      </span>
-      <span>
-        <input type="checkbox" id="edit-schedule-sun-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(0) != -1" value="0">
-        <label for="edit-schedule-sun-{{schinfo.id}}" class="schedule-label">Sun</label>
-      </span>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-2 edit-schedule-group">
-      <span>
-        <input type="checkbox" id="edit-schedule-sunset-{{schinfo.id}}" value="sunset" ng-checked="schinfo.dateTime === 'sunset'">
-        <label for="edit-schedule-sunset-{{schinfo.id}}" class="schedule-label schedule-sunset-label">Sunset</label>
-      </span>
-      <span>
-        <input type="checkbox" id="edit-schedule-sunrise-{{schinfo.id}}" value="sunrise" ng-checked="schinfo.dateTime === 'sunrise'">
-        <label for="edit-schedule-sunrise-{{schinfo.id}}" class="schedule-label schedule-sunrise-label">Sunrise</label>
-      </span>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-1 edit-schedule-group">
-      <button type="submit" class="button blue-btn">Save</button>
-    </div>
+    <form ng-submit="editSchedule(schinfo)">
+      <div class="col-xs-6 col-sm-6 col-md-2 schedule-group">
+        <input type="text" class="form-input" ng-model="schinfo.name" placeholder="Schedule name" pattern=".{4,15}" title="4 - 15 characters" required>
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-2 schedule-group">
+        <input type="number" class="form-number" name="time" ng-model="schinfo.dateTime.hour" placeholder="Hours" min="0" max="23">
+        <input type="number" class="form-number" name="time" ng-model="schinfo.dateTime.minute" placeholder="Minutes" min="0" max="59">
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-5 schedule-group">
+        <span>
+          <input type="checkbox" name="day" id="edit-schedule-mon-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(1) != -1" value="1">
+          <label for="edit-schedule-mon-{{schinfo.id}}" class="schedule-label">Mon</label>
+        </span>
+        <span>
+          <input type="checkbox" name="day" id="edit-schedule-tue-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(2) != -1" value="2">
+          <label for="edit-schedule-tue-{{schinfo.id}}" class="schedule-label">Tue</label>
+        </span>
+        <span>
+          <input type="checkbox" name="day" id="edit-schedule-wed-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(3) != -1" value="3">
+          <label for="edit-schedule-wed-{{schinfo.id}}" class="schedule-label">Wed</label>
+        </span>
+        <span>
+          <input type="checkbox" name="day" id="edit-schedule-thu-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(4) != -1" value="4">
+          <label for="edit-schedule-thu-{{schinfo.id}}" class="schedule-label">Thu</label>
+        </span>
+        <span>
+          <input type="checkbox" name="day" id="edit-schedule-fri-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(5) != -1" value="5">
+          <label for="edit-schedule-fri-{{schinfo.id}}" class="schedule-label">Fri</label>
+        </span>
+        <span>
+          <input type="checkbox" name="day" id="edit-schedule-sat-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(6) != -1" value="6">
+          <label for="edit-schedule-sat-{{schinfo.id}}" class="schedule-label">Sat</label>
+        </span>
+        <span>
+          <input type="checkbox" name="day" id="edit-schedule-sun-{{schinfo.id}}" ng-checked="schinfo.dateTime.dayOfWeek.indexOf(0) != -1" value="0">
+          <label for="edit-schedule-sun-{{schinfo.id}}" class="schedule-label">Sun</label>
+        </span>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-2 schedule-group">
+        <span>
+          <input type="checkbox" id="edit-schedule-sunset-{{schinfo.id}}" value="sunset" name="sunset" ng-checked="schinfo.dateTime === 'sunset'" ng-click="disableInputs($event)">
+          <label for="edit-schedule-sunset-{{schinfo.id}}" class="schedule-label schedule-sunset-label">Sunset</label>
+        </span>
+        <span>
+          <input type="checkbox" id="edit-schedule-sunrise-{{schinfo.id}}" value="sunrise" name="sunrise" ng-checked="schinfo.dateTime === 'sunrise'" ng-click="disableInputs($event)">
+          <label for="edit-schedule-sunrise-{{schinfo.id}}" class="schedule-label schedule-sunrise-label">Sunrise</label>
+        </span>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-1 schedule-group">
+        <button type="submit" class="button blue-btn">Save</button>
+      </div>
+    </form>
   </div>
 </div>
